WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15745
[GTK] Arrow keys do not Scroll
https://bugs.webkit.org/show_bug.cgi?id=15745
Summary
[GTK] Arrow keys do not Scroll
Naiem
Reported
2007-10-28 22:16:18 PDT
I have cross compiled the Webkit+Gtk port onto a linux box. There is no mouse in the development environment. When a page is launched, scrollbar is displayed as display window is set to 400x300. But the page cannot be scrolled, as there is no mouse to drag the scrollbar. Arrow keys cannot be used to scroll the page.
Attachments
0001-Handle-scrolling-for-Up-Down-Right-Left-in-WebKitPag.patch
(2.64 KB, patch)
2007-11-10 16:09 PST
,
Xan Lopez
alp
: review-
Details
Formatted Diff
Diff
0001-Support-arrow-keys-for-scrolling.patch
(3.87 KB, patch)
2007-11-24 16:31 PST
,
Xan Lopez
alp
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2007-11-10 16:09:55 PST
Created
attachment 17175
[details]
0001-Handle-scrolling-for-Up-Down-Right-Left-in-WebKitPag.patch Subject: [PATCH] Handle scrolling for Up/Down/Right/Left in WebKitPage. The Qt port does the same, not sure why is it needed. --- WebKit/gtk/Api/webkitgtkpage.cpp | 26 +++++++++++++++++++++++++- WebKit/gtk/ChangeLog | 11 +++++++++++ 2 files changed, 36 insertions(+), 1 deletions(-)
Alp Toker
Comment 2
2007-11-12 04:41:42 PST
Comment on
attachment 17175
[details]
0001-Handle-scrolling-for-Up-Down-Right-Left-in-WebKitPag.patch Will be good to get this fixed. However, the constant should be defined in one place, if there needs to be a constant at all. I think the correct fix is actually to use the scroll granularity and direction enumerations just like the Win port does. Perhaps it's even just a copy-and-paste job.
Xan Lopez
Comment 3
2007-11-12 11:44:31 PST
For the record, I tried copying the windows code and the scroll method of our scrollbars fails to work for some reason... Will look into it.
Xan Lopez
Comment 4
2007-11-24 16:31:31 PST
Created
attachment 17491
[details]
0001-Support-arrow-keys-for-scrolling.patch From a3d09e941a186cba64789878b727bfe245bd039d Mon Sep 17 00:00:00 2001 From: Xan Lopez <
xan@gnome.org
> Date: Sun, 25 Nov 2007 02:29:54 +0200 Subject: [PATCH] Support arrow keys for scrolling. Also fix warning in gtk_message_dialog_new. --- WebKit/gtk/Api/webkitgtkpage.cpp | 40 ++++++++++++++++++++++++++++++++++++- WebKit/gtk/ChangeLog | 14 +++++++++++++ 2 files changed, 52 insertions(+), 2 deletions(-)
Alp Toker
Comment 5
2007-11-24 18:51:46 PST
Comment on
attachment 17491
[details]
0001-Support-arrow-keys-for-scrolling.patch gtk_message_dialog_new() has already been fixed. Good with the flow control change we discussed.
Alp Toker
Comment 6
2007-11-24 18:57:32 PST
Landed in
r28009
. We'll need to re-write this properly at some point of course. (The content editable regression turned out to be due to a missing 'break' in EditorClientGtk.)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug