2007-11-24  Xan Lopez  <xan@gnome.org>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=15745
        [GTK] Arrow keys do not Scroll

        * Api/webkitgtkpage.cpp:

        Support Up/Down/Right/Left keys to scroll. Slight hack, see FIXME for
        details.


Canonical link: https://commits.webkit.org/21928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28009 268f45cc-cd09-0410-ab3c-d52691b4dbfc